# iseq

./: .pre-commit-config.yaml  MANIFEST.in  conftest.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-daily-test.yml  python-package.yml  python-publish.yml  python-test.yml  pythonapp.yml
iseq/: __init__.py  _alphabet.py  _amino.py  _cli.py  _codon.py  _environment.py  _example.py  _fasta.py  _file.py  _fragment.py  _gff.py  _hmmdata.py  _hmmer.py  _misc.py  _model.py  _profile.py  _result.py  _type.py  _typing.py  alphabet.py  amino.py  codon.py  codon_table.py  codon_usage.py  codon_usage_20200706.pkl.xz  conftest.py  domtblout.py  example.py  file.py  fragment.py  frame.py  gencode.py  hmmer_model.py  hmmpress.py  hmmscan.py  hmmscore.py  hmmsearch.py  model.py  profile.py  result.py  (+6 more)
iseq/_cli/: _cli.py  amino_decode.py  bscan.py  gff.py  hmmer3_scanner.py  hscan.py  misc.py  output_writer.py  press.py  protein_scanner.py  pscan.py  pscan2.py  pscan3.py  scan.py  scanner.py  score.py  search.py  strip.py  unpress.py
iseq/_data/: PF03373_GALNBKIG_cut.codon.fasta  PF03373_GALNBKIG_cut.gff  large_rna_seq.fasta  large_rna_seq_amino48.fasta  large_rna_seq_codon48.fasta  large_rna_seq_output0.gff  large_rna_seq_output48.gff  problematic1.fasta  problematic1.hmm
iseq/_gff/: __init__.py  conftest.py  gff.py
iseq/_test_data/: __init__.py  _files.py
iseq/amino/: __init__.py  fragment.py  path.py  step.py
iseq/codon/: __init__.py  fragment.py  path.py  result.py  (+1 more)
profmark/: Snakefile  run_hmmer.sh  run_iseq.sh
scripts/: download.py  parse.py
(+66 files in other folders)
