[build-system]
requires = ["setuptools >= 47.1.1", "wheel >= 0.34.2"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
src_paths = ["iseq"]
known_third_party = ["appdirs", "brotli", "click", "fasta_reader",
                     "hmmer_reader", "imm", "nmm", "numpy", "pandas",
                     "pytest", "ray", "requests", "setuptools", "tqdm",
                     "in_place", "humanfriendly", "seaborn", "matplotlib",
                     "Bio", "biopython", "importlib_resource", "hmmer"]
